# citadel-rs

./: .gitignore  Config.example.toml  Makefile
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
backend/static/: frontend-9e5d56e81f76a4cc.js  frontend-9e5d56e81f76a4cc_bg.wasm  index.html
common/: Cargo.toml
common/src/: config.rs  lib.rs
frontend/: Cargo.toml  index.html  index.scss
frontend/src/: app.rs  header.rs  lib.rs  main.rs  navigation.rs
frontend/src/components/: mod.rs  url.rs
frontend/src/pages/: home.rs  mod.rs
types/src/: lib.rs
