[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16"
types = { path = "../types" }
wasm-bindgen-futures = "0.4.30"
reqwasm = "0.5.0"
stylist = { version = "0.10.1", features = [ "yew_integration"] }




